unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/zkmulti__MCShipment_Special_Services__c.object-meta.xml
<CustomObject>
    <label>Shipment Special Services</label>
    <nameField>
        <displayFormat>Special-Services-{000000000}</displayFormat>
        <label>Shipment Special Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Special Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>