unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__AdultSignature__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AdultSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Signature</label>
    <type>Checkbox</type>
</CustomField>