unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__AdultSignatureRestrictedDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AdultSignatureRestrictedDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Signature Restricted Delivery</label>
    <type>Checkbox</type>
</CustomField>