unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__AlcoholShipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AlcoholShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alcohol Shipment</label>
    <type>Checkbox</type>
</CustomField>