unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__AllowRecordDelete__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AllowRecordDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Record Delete</label>
    <type>Checkbox</type>
</CustomField>