unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__AMDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AMDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Delivery</label>
    <type>Checkbox</type>
</CustomField>