unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Blind_Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Blind_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blind Shipment</label>
    <type>Checkbox</type>
</CustomField>