unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Bso__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Bso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BSO</label>
    <type>Checkbox</type>
</CustomField>