unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__BsoStreet__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__BsoStreet__c</fullName>
    <label>BSO Street</label>
    <type>TextArea</type>
</CustomField>