unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__CarbonNeutral__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CarbonNeutral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carbon Neutral</label>
    <type>Checkbox</type>
</CustomField>