unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Certified_Mail__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Certified_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Mail</label>
    <type>Checkbox</type>
</CustomField>