unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__COD_Amount__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__COD_Amount__c</fullName>
    <label>COD Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>