unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__CodAddressIsResidential__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CodAddressIsResidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COD Collection Address is Residential</label>
    <type>Checkbox</type>
</CustomField>