unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__CodContactTaxIdType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CodContactTaxIdType__c</fullName>
    <label>COD Collection Contact Tax ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>Business National</fullName>
            </value>
            <value>
                <fullName>Business State</fullName>
            </value>
            <value>
                <fullName>Business Union</fullName>
            </value>
            <value>
                <fullName>Personal National</fullName>
            </value>
            <value>
                <fullName>Personal State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>