unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__CodPMExpressReturn__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CodPMExpressReturn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COD PM Express Return</label>
    <type>Checkbox</type>
</CustomField>