unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__CodStreet__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CodStreet__c</fullName>
    <label>COD Collection Street</label>
    <type>TextArea</type>
</CustomField>