unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Collect_On_Delivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Collect_On_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect On Delivery</label>
    <type>Checkbox</type>
</CustomField>