unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Consolidation__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Consolidation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidation</label>
    <referenceTo>zkmulti__MultiPackageShipment__c</referenceTo>
    <relationshipLabel>Shipment Special Services</relationshipLabel>
    <relationshipName>Shipment_Special_Services</relationshipName>
    <type>Lookup</type>
</CustomField>