unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__DangerousGoods__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DangerousGoods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dangerous Goods</label>
    <type>Checkbox</type>
</CustomField>