unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__DangerousGoodsCargoAircraftOnly__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DangerousGoodsCargoAircraftOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dangerous goods shipment is packaged and documented for movement on cargo aircraft only.</description>
    <inlineHelpText>Dangerous goods shipment is packaged and documented for movement on cargo aircraft only.</inlineHelpText>
    <label>Dangerous Goods Cargo Aircraft Only</label>
    <type>Checkbox</type>
</CustomField>