unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__DateCertainHomeDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DateCertainHomeDeliveryDate__c</fullName>
    <label>FedEx Date Certain Home Delivery® Date</label>
    <type>Date</type>
</CustomField>