unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__DeliverToAddresseeOnly__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DeliverToAddresseeOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver To Addressee Only</label>
    <type>Checkbox</type>
</CustomField>