unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__DeliveryConfirmation__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DeliveryConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Confirmation</label>
    <type>Checkbox</type>
</CustomField>