unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__DirectDeliveryOnly__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DirectDeliveryOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Delivery Only</label>
    <type>Checkbox</type>
</CustomField>