unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__ElectronicReturnReceipt__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ElectronicReturnReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Return Receipt</label>
    <type>Checkbox</type>
</CustomField>