unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__FreightInsideDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__FreightInsideDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Inside Delivery</label>
    <type>Checkbox</type>
</CustomField>