unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__FreightInsidePickup__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__FreightInsidePickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Inside Pickup</label>
    <type>Checkbox</type>
</CustomField>