unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Hal__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Hal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold at FedEx Location</label>
    <type>Checkbox</type>
</CustomField>