unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__HazardousMaterials__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HazardousMaterials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Materials</label>
    <type>Checkbox</type>
</CustomField>