unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Insurance_Amount__c</fullName>
    <label>Insurance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>