unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Is_Insurance__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Is_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Insurance</label>
    <type>Checkbox</type>
</CustomField>