unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__IsPackageReleaseCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IsPackageReleaseCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Package Release Code</label>
    <type>Checkbox</type>
</CustomField>