unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__LithiumBatteriesCells__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LithiumBatteriesCells__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lithium Batteries/Cells</label>
    <type>Checkbox</type>
</CustomField>