unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__LithiumBatteryException__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LithiumBatteryException__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lithium Battery Exception</label>
    <type>Checkbox</type>
</CustomField>