unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__LiveAnimalSurcharge__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LiveAnimalSurcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Animal Surcharge</label>
    <type>Checkbox</type>
</CustomField>