unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__NoDeliveryOnSaturdays__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NoDeliveryOnSaturdays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Delivery on Saturdays</label>
    <type>Checkbox</type>
</CustomField>