unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__OneRate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OneRate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Rate</label>
    <type>Checkbox</type>
</CustomField>