unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__OrmD__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OrmD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ORM-D</label>
    <type>Checkbox</type>
</CustomField>