unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__PharmacyDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PharmacyDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pharmacy Delivery</label>
    <type>Checkbox</type>
</CustomField>