unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__PriorityAlert__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PriorityAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Alert</label>
    <type>Checkbox</type>
</CustomField>