unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__RegisteredMail__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__RegisteredMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered Mail</label>
    <type>Checkbox</type>
</CustomField>