unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__RegisteredMailValue__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__RegisteredMailValue__c</fullName>
    <label>Registered Mail Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>