unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__RestrictedDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__RestrictedDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted Delivery</label>
    <type>Checkbox</type>
</CustomField>