unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__ReturnReceipt__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ReturnReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Receipt</label>
    <type>Checkbox</type>
</CustomField>