unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__ReturnsClearance__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ReturnsClearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returns Clearance</label>
    <type>Checkbox</type>
</CustomField>