unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__SaturdayDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SaturdayDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Delivery</label>
    <type>Checkbox</type>
</CustomField>