unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__SaturdayHold__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SaturdayHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Hold</label>
    <type>Checkbox</type>
</CustomField>