unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__SaturdayPickup__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SaturdayPickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Pickup</label>
    <type>Checkbox</type>
</CustomField>