unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>zkmulti__MCShipment__c</referenceTo>
    <relationshipName>MCShipment_Special_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>