unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__SignatureWaiver__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SignatureWaiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Waiver</label>
    <type>Checkbox</type>
</CustomField>