unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__SmallQuantityException__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SmallQuantityException__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Small Quantity Exception</label>
    <type>Checkbox</type>
</CustomField>