unpackaged/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__ThirdPartyConsignee__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ThirdPartyConsignee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Consignee</label>
    <type>Checkbox</type>
</CustomField>